--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -1,5 +1,6 @@
 = Summary
 
 . link:README.adoc[Introduction]
-. Game Play
-
+. link:game_play.adoc[Game play]
+. link:architecture.adoc[Application architecture]
+. link:chronicles/README.adoc[Appendix: The Chronicles]
