--- a/chronicles/README.adoc
+++ b/chronicles/README.adoc
@@ -9,6 +9,8 @@
 
 The following sections are more like a blog than a book. Creating a new application from scratch using microservices is a messy business: documenting the process is, in some respects, as important as showing the end result.
 
+Given this is an opensource book, we invite you to contribute your own experiences to this section.
+
 == The first pass
 
 image::Progression.001.jpeg[Progression, width=600]
