--- a/game_play.adoc
+++ b/game_play.adoc
@@ -5,18 +5,16 @@
 :toclevels: 2
 :imagesdir: /images
 
-Games are meant to be played! The only objective for a game player is to be entertained.
-
-There may be puzzles to solve, riddles to answer, cryptic speech to decipher, whatever! It completely depends on what the developers of any given room have decided to build. 
+Games are meant to be played! The only objective for a game player is to be entertained. There may be puzzles to solve, riddles to answer, cryptic speech to decipher, whatever! It completely depends on what the developers of any given room have decided to build. 
 
 == Navigation and common commands
 
-Some commands will always be available. Those that are implemented by core game services (namely the Mediator) will also always behave the same.
+Some commands will always be available. Those that are implemented by link:microservices/README.adoc[core game services] (namely the Mediator) will also always behave the same.
 
 .Common commands provided by the game
 [cols=".<m,.<2",options="header,footer"]
 |==========================
-|Commands |Description  
+|Command  |Description  
 |/help    |List available commands (will vary by room)  
 |/exits   |List room exits  
 |/sos     |Emergency rescue: will return you to First Room  
@@ -25,7 +23,7 @@ Some commands will always be available. Those that are implemented by core game 
 .Common commands implemented by rooms: implementations will vary
 [cols=".<m,.<2",options="header"]
 |==========================
-|Commands   | Description  
+|Command    | Description  
 |/look      | Look at the room
 |/examine   | Examine an item, e.g. `/examine` or `/examine item`  
 |/go        | Exit the room using the specified door, e.g. `/go N`
@@ -35,7 +33,7 @@ Some commands will always be available. Those that are implemented by core game 
 
 == First Room
 
-First Room is a special room: it is located (and fixed with a permanent sticking charm) at the origin of the map. It is the starting place for every player joining the game, and is also where players return when things go terribly wrong, or when they call for a rescue (`/sos`).
+First Room is a special room: it is located (and fixed with a https://en.wikibooks.org/wiki/Muggles%27_Guide_to_Harry_Potter/Magic/Permanent_Sticking_Charm[permanent sticking charm]) at the origin of the map. It is the starting place for every player joining the game, and is also where players return when things go terribly wrong, or when they call for a rescue (`/sos`).
 
 First room also provides some useful custom commands for room developers.
 
