--- a/game_play.adoc
+++ b/game_play.adoc
@@ -14,7 +14,7 @@ Some commands will always be available. Those that are implemented by link:micro
 .Common commands provided by the game
 [cols=".<m,.<2",options="header,footer"]
 |==========================
-|Commands |Description  
+|Command  |Description  
 |/help    |List available commands (will vary by room)  
 |/exits   |List room exits  
 |/sos     |Emergency rescue: will return you to First Room  
@@ -23,7 +23,7 @@ Some commands will always be available. Those that are implemented by link:micro
 .Common commands implemented by rooms: implementations will vary
 [cols=".<m,.<2",options="header"]
 |==========================
-|Commands   | Description  
+|Command    | Description  
 |/look      | Look at the room
 |/examine   | Examine an item, e.g. `/examine` or `/examine item`  
 |/go        | Exit the room using the specified door, e.g. `/go N`
