--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -7,8 +7,7 @@
 
 Game On! is an application composed of several microservices. 
 
-image::CoreServices.png["Core services",align="center"]
-
+image:CoreServices.png["Core services",align="center",]
 
 
 Note that the set of core services has changed over time. The best practice with microservice architectures is still to start with a monolith, or at worst, with very large chunks. We started with two large blobs, and refined the granularity of services as the application evolved. link:chronicles/README.md[The Chronicles] describe this evolution, if you're curious.
