--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -11,3 +11,17 @@ image:CoreServices.png["Core services",align="center"]
 
 The set of core services has changed over time: the best practice with microservice architectures is still to start with a monolith or (at least) very large chunks. We started with two large blobs, and refined the granularity of services as the application evolved. link:chronicles/README.md[The Chronicles] describe this evolution, if you're curious.
 
+== Core Services
+
+=== Map
+
+=== Player
+
+=== Mediator
+
+=== Sweep
+
+=== webapp
+
+=== Proxy/Gateway and swagger (not shown)
+
