--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -26,6 +26,8 @@ image:CoreServices.png["Core services",align="center"]
 
 == Other Services
 
+image:SecondaryServices.png["Secondary services",align="center"]
+
 === Swagger
 
 === RecRoom / Basement
