--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -13,6 +13,8 @@ image:CoreServices.png["Core services",align="center"]
 
 === webapp
 
+The webapp service is trivial: it is a simple nginx process that serves the static files that comprise the front-end of the UI. The front-end uses standard/published APIs to interact with backend microservices. Having this as a separate service allows our front-end to be changed and updated independently of the other services.
+
 === Player
 
 === Mediator
