--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -15,7 +15,9 @@ image:CoreServices.png["Core services",align="center"]
 
 The webapp service is a simple nginx process that serves the static files that comprise the front-end of the UI. The front-end is a single page application written in JavaScript that makes requests using standard/published APIs to interact with backend microservices via the proxy/gateway. 
 
-Having this as a separate entity allows our front-end to be changed and updated independently from other services. This service has fairly simple scaling requirements, as it serving only cachable static files.
+Having this as a separate entity allows our front-end to be changed and updated independently from other services. Some suggest that UI components should be provided by each backend service, which can be true with a UI built from distinct sections. The game, however, uses a more integrated UI: the application running in the client device is invoking public APIs and processing responses direction. 
+
+This service has fairly simple scaling requirements, as it serving only cachable static files.
 
 === Player
 
