--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -3,4 +3,6 @@
 . link:README.adoc[Introduction]
 . link:game_play.adoc[Game play]
 . link:microservices/README.adoc[Application architecture]
+. link:walkthroughs/README.adoc[Extending the game]
 . link:chronicles/README.adoc[Appendix: The Chronicles]
+
