--- a/walkthroughs/README.adoc
+++ b/walkthroughs/README.adoc
@@ -1,5 +1,9 @@
 = Extending the Game
-
+:icons: font
+:toc: preamble
+:toc-title: 
+:toclevels: 2
+:imagesdir: /images
 
 Rooms are registered as entities with the Map, and are where the good stuff is. The silly, the crazy, the odd, the boring: this is where you can let your creativity loose. But, what do rooms have to do with microservices? 
 
