--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -67,6 +67,9 @@ We have a few room implementations defined within our repositories.
 * The RecRoom and Basement
 * The Map room
 
+For most of them, a single service is providing a single room. The notable exception is the RecRoom and Basement, where a single service is providing two related rooms. 
+
+Each service is responsible for managing its own data (if any), and satisfying the published APIs for a room to the satisfaction of the Sweep. Each will make it's own determination of how to share information across active instances of the service
 
 
 
