--- a/microservices/README.adoc
+++ b/microservices/README.adoc
@@ -5,7 +5,7 @@
 :toclevels: 2
 :imagesdir: /images
 
-Game On! is an application composed of several microservices. The set services has changed over time: the best practice with microservice architectures is still to start with a monolith or (at least) very large chunks. We started with two large blobs, and refined the granularity of services as the application evolved. link:chronicles/README.md[The Chronicles] describe this evolution, if you're curious.
+Game On! is an application composed of several microservices. The set services has changed over time: the best practice with microservice architectures is still to start with a monolith or (at least) very large chunks. We started with two large blobs, and refined the granularity of services as the application evolved. link:chronicles/README.adoc[The Chronicles] describe this evolution, if you're curious.
 
 == Core Services
 
