rearrange chronicles; create, deploy, register
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -3,9 +3,12 @@
 . link:README.adoc[Introduction]
 . link:game_play.adoc[Game Play]
 . link:walkthroughs/README.adoc[Extending the Game]
-.. link:walkthroughs/createRoom.adoc[Creating Rooms]
+.. link:walkthroughs/createRoom.adoc[Create a Room]
+.. link:walkthroughs/deployRoom.adoc[Deploy a Room]
 ... link:walkthroughs/bluemix-cf.adoc[IBM Bluemix: Cloud Foundry]
 ... link:walkthroughs/bluemix-ics.adoc[IBM Bluemix: Containers]
+... link:walkthroughs/heroku.adoc[Heroku]
+.. link:walkthroughs/registerRoom.adoc[Register a Room]
 //.. link:walkthroughs/createNPC.adoc[Creating Non-Player Characters]
 .. link:walkthroughs/createMore.adoc[Advanced Adventures]
 ... link:walkthroughs/elkStack.adoc[Logging using the ELK stack]
