--- a/walkthroughs/createRoom.adoc
+++ b/walkthroughs/createRoom.adoc
@@ -1,19 +1,16 @@
-= Creating Rooms
+= Create a Room service
 :icons: font
 :toc: preamble
 :toc-title:
 :toclevels: 2
+:WebSocket: link:../microservices/WebSocketProtocol.adoc
+:sweep: link:../microservices/TheSweep.adoc
 :javascript: https://github.com/gameontext/sample-room-nodejs#introduction
 :java: https://github.com/gameontext/sample-room-java#introduction
 :go: https://github.com/gameontext/sample-room-go#introduction
 :samples: https://github.com/gameontext?utf8=✓&q=sample-room
-:cf: link:bluemix-cf.adoc
-:docker: link:bluemix-ics.adoc
-:more: link:createMore.adoc
-:first-room: https://game-on.org/#/play
-:swagger: https://game-on.org/swagger/
-:sweep: link:../microservices/TheSweep.adoc
-:WebSocket: link:../microservices/WebSocketProtocol.adoc
+:deployRoom: link:deployRoom.adoc
+:registerRoom: link:registerRoom.adoc
 
 This game was built to give you reasons to try things, to make it easier (or
 more interesting) for you to learn the hard way.
@@ -43,7 +40,7 @@ Rooms will move in the map based on their score, with high-scoring
 rooms moving toward the center (closer to First Room), and low-scoring
 rooms moving toward the periphery.
 
-== Create a room
+== Let's get started!
 
 As mentioned above, creating a room (your very own microservice) is straight-up.
 Your deployment options may vary depending on the language you choose.
@@ -53,86 +50,6 @@ Your deployment options may vary depending on the language you choose.
 * {go}[Create a Game On! Room in Go]
 * {samples}[... browse for sample rooms in other languages]
 
-== Deploy your room to a publicly reachable location
-
-For people playing the game to reach your new shiny microservice, it needs a
-public endpoint. This could mean running your room as a server on any old hosting
-service. But as we're playing with cloud native applications and microservices,
-we should deploy our service to a Cloud provider, right?
-
-.IBM Bluemix
-* {cf}[Deploy your room as a CloudFoundry application]
-* {docker}[Deploy your room as a Container]
-
-== Register your room
-
-To register your room you need the WebSocket endpoint. This will vary depending on where you have
-deployed your app, but should look something like:
-
-.IBM Bluemix
-* Cloud Foundry application or Container group in IBM Container Service:
-  - US South: `ws://<cf-app-name>.mybluemix.net/room`
-  - United Kingdom: `ws://<cf-app-name>.eu-gb.mybluemix.net/room`
-* Single container instance in IBM Container Service
-  - `ws://<ip address>:9080/room`
-
-If you visit your deployed application, you should be able to copy the
-WebSocket address from the (admittedly basic) webpage.
-
-[NOTE]
-====
-Room registration is long-lived: the registration for your room
-will persist until you delete it. You can list and delete your registered
-rooms using commands in {first-room}[First Room] or the Room Management
-page.
-====
-
-=== Use the Edit Rooms dialog in Game On! to register your room:
-
-1.  Go to https://game-on.org[Game On!] and sign in.
-2.  Click on the building icon in the top right of the browser window to go to the Room Management page.
-3.  Make sure **Create a new room** is selected from the **Select a room** drop-down.
-4.  Provide a short nickname for your room (required), e.g. `shortcut`
-5.  Provide a descriptive title for your room, e.g. `The Shortest Cut`
-6.  Paste in the WebSocket endpoint
-7.  Fill in as many other fields as you care to.
-    * The description provided in this UI is used in the interactive map and
-      other lists or indexes of defined rooms. The description shown in the
-      game can reuse this text, or can be defined separately.
-    * Doors: <<doors,Describe each door as seen from the outside>>.
-8.  Click **Create** and the room will be created for you.
-
-[[doors]]
-=== Describing Doors
-
-When registering a room, you provide descriptions for at least 4 doors.
-Describe each door as it would appear from outside the room.
-
-.Your room is in green. Describe doors as seen by the navigating player.
-image:../images/roomRegistration.png[title="Describing doors from the outside", align="center", width="400"]
-
-For example, the doors of First Room all have friendly faces on them somewhere.
-If you pretend, in the diagram above, that the green room is First Room, the
-person walking East saw the following when listing `/exits`:
-
-    (E)ast  A polished wooden door with an inlaid friendly face
-
-If this doesn't make sense to you, don't worry about it; describe each door
-without referencing a direction, and things will be fine.
-
-
-== Hello, World!
-
-Once the room is set up and it has registered with Game On!, it will be accessible
-as a room in the game.
-
-1. If you aren't in The First Room, use `/sos` to return there.
-2. Use the Game On! command `/listmyrooms` from The First Room, to see your list
-   of rooms. Your newly registered room should appear in that list.
-3. Use the `/teleport` command to go directly to your room from The First Room to
-   see it in action.
-
-Congratulations, you've deployed a microservice that extended an
-existing microservices-based application so that it can do something new!
-
-On to {more}[Advanced Adventures]...
+Once you have a sample room created and {deployRoom}[deployed], you'll
+{registerRoom}[register] the room's WebSocket endpoint with the game
+(essentially a webhook).
