Revisions to Chronicles
Signed-off-by: Erin Schnabel <schnabel@us.ibm.com>

--- a/SUMMARY.adoc
+++ b/SUMMARY.adoc
@@ -21,3 +21,18 @@
 .. link:microservices/Map.adoc[Map service details]
 . link:about/README.adoc[Microservices: The Backstory]
 . link:chronicles/README.adoc[Appendix: The Chronicles]
+.. link:chronicles/1-first-pass.adoc[The First Pass]
+.. link:chronicles/2-cloud-automation.adoc[Automation! Clouds!]
+.. link:chronicles/3-web-front-end.adoc[Freeing the Front-End]
+.. link:chronicles/4-polyglot.adoc[Not Java]
+.. link:chronicles/5-swagger.adoc[Show the API]
+.. link:chronicles/6-player-explodes.adoc[Breaking down the Player service]
+.. link:chronicles/7-etcd.adoc[Config management #FTW]
+.. link:chronicles/8-bye-concierge.adoc[Buh-bye to Concierge!]
+.. link:chronicles/9-map-auth-hmac.adoc[Authorized operations]
+.. link:chronicles/10-more-rooms.adoc[More Rooms!]
+.. link:chronicles/11-the-sweep.adoc[Swept away... ]
+.. link:chronicles/12-room-isolation.adoc[Rec Room gets the cold shoulder]
+.. link:chronicles/13-auth-service.adoc[Auth Goes Its Own Way]
+.. link:chronicles/14-events.adoc[Pandemonium! Events!]
+.. link:chronicles/15-service-discovery.adoc[Marco! Polo! (Service registration and discovery)]
