--- a/chronicles/11-the-sweep.adoc
+++ b/chronicles/11-the-sweep.adoc
@@ -1,4 +1,4 @@
-= Enter: The Sweep
+= Swept away... 
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
