--- a/chronicles/12-room-isolation.adoc
+++ b/chronicles/12-room-isolation.adoc
@@ -1,4 +1,4 @@
-= Go on Now, Go, Walk out the Door.. (don't turn around now)
+= Rec Room Gets the Cold Shoulder
 :icons: font
 :signedHeaders: link:../microservices/ApplicationSecurity.adoc
 :WebSocketProtocol: link:../microservices/WebSocketProtocol.adoc
@@ -6,7 +6,9 @@
 
 image:../images/Progression.012.jpeg[Progression, width=95%]
 
-As we started to see user created rooms added to the Map, we started to think about treating
+*Go on Now, Go! Walk out the Door.. (don't turn around, now...)*
+
+As user-created rooms were added to the Map, we started thinking about treating
 our rooms like everybody else's. Up until this point, our rooms have cheated (a little),
 as they've been able to directly talk to the core services. But no more! For we have kicked
 the rooms out of the core services club, and told them they can no longer be members.
