--- a/chronicles/4-polyglot.adoc
+++ b/chronicles/4-polyglot.adoc
@@ -7,8 +7,8 @@
 image:../images/Progression.004.jpeg[Progression, width=95%]
 
 Our team has nothing against JavaScript, but Java is what we know. When attempting
-something big and new, we felt it usually good idea to constrain the number of
-moving parts in the air at once. In this case, we stuck with a language we were
-familiar with for the core services.
+something big and new, we felt it was a good idea to constrain the number of
+moving parts in the air. In this case, we stuck with a language we were
+familiar with for the first core services.
 
-The Node.js room brought JS to the backend. More will follow.
+The Node.js room brought JavaScipt to the backend. More will follow.
